syntax = "proto3";

package pyth_lazer;

message PublisherUpdatePayload {
  repeated PublisherUpdate updates = 1;
  uint64 batch_timestamp_us = 2;
}

message PublisherUpdate {
  uint32 price_feed_id = 1;
  uint64 source_timestamp_us = 2;
  uint64 publisher_timestamp_us = 3;
  oneof update {
    PriceUpdateV1 price_update_v1 = 4;
    FundingRateUpdateV1 funding_rate_update_v1 = 5;
  }
}

message PriceUpdateV1 {
  optional int64 price = 1;
  optional int64 best_bid_price = 2;
  optional int64 best_ask_price = 3;
}

message FundingRateUpdateV1 {
  optional int64 price = 1;
  optional int64 rate = 2;
}
